samples/by-property/invalid/request-quote-decision.bspl
../../trade-finance/request-quote-decision.bspl